# Speechos

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  dev.ps1  dev.sh  package.json  start.ps1  start.sh
api/: check_tts.py  pyproject.toml  test_all_models.py  test_docker_stt.py  test_fixes.py  test_integration.py  test_vad_stt.py  test_wav2small.py
api/src/: __init__.py  __main__.py  analysis.py  audio.py  config.py  docker_stt.py  docker_tts.py  docker_utils.py  models.py  server.py
api/src/routers/: __init__.py  analyze.py  health.py  recordings.py  synthesize.py  system.py  transcribe.py
docker/: analysis-engines.yml  api-cpu.Dockerfile  api.Dockerfile  docker-compose.cpu.yml  docker-compose.gpu.yml  nginx.conf  stt-engines.yml  tts-engines.yml  web.Dockerfile
docs/: ENGINE-AUDIT.md  learned_lessons.md
docs/architecture/: ARCHITECTURE.md  HARDWARE-TIERS.md
docs/conditionanalysis/: PROJECT-STATUS-2026-02-27.md
docs/plans/: PLAN-001-WSL2-FIXES-AND-TESTING.md  PLAN-002-ENGINE-CATALOG-AND-BENCHMARKING.md
docs/research/speech-analysis/: SPEECH-ANALYSIS-MODELS.md  TEST-REPORT.md  TEST-RESULTS.json
docs/research/speech-to-text/: STT-MODEL-COMPARISON.md
docs/research/text-to-speech/: TTS-MODEL-COMPARISON.md
web/: next.config.ts  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: AnalysisView.tsx  AudioPlayer.tsx  ModelSelectors.tsx  Recorder.tsx  RecordingsLibrary.tsx  StatusBar.tsx  TranscriptionView.tsx  TtsPlayground.tsx
web/src/lib/: api.ts  (+1 more)
(+2 files in other folders)
