[project]
name = "speechos-api"
version = "0.1.0"
description = "Speechos: local speech analysis & synthesis API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.18",
    "pyyaml>=6.0",
    "psutil>=6.0",
    "aiofiles>=24.1.0",
    "websockets>=13.0",
    "numpy>=1.26.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "faster-whisper>=1.1.0",
    "vosk>=0.3.45",
    "piper-tts>=1.2.0",
    "silero-vad>=5.1",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "resemblyzer>=0.1.4",
    "setuptools<75",
    "pandas>=3.0.1",
    "funasr>=1.3.1",
    "kokoro>=0.3.0",
    "transformers>=4.40.0,<5.0.0",
    "opensmile>=2.6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
gpu = [
    "funasr>=1.1.0",
    "modelscope>=1.17.0",
    "pyannote.audio>=3.3.0",
]
speechbrain = [
    "speechbrain>=1.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
